# apps/app/server/openapi.gen.json
@@ -27,22 +27,6 @@
         }
       }
     },
-    "/api/desktop/subscription": {
-      "get": {
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Subscription"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/web/connect": {
       "post": {
         "requestBody": {
@@ -1676,48 +1660,6 @@
               "type": "string"
             }
           }
-        ]
-      },
-      "Subscription": {
-        "type": "object",
-        "required": [
-          "current_period_end",
-          "status"
-        ],
-        "properties": {
-          "current_period_end": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "price_id": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "status": {
-            "$ref": "#/components/schemas/SubscriptionStatus"
-          },
-          "trial_end": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int64"
-          }
-        }
-      },
-      "SubscriptionStatus": {
-        "type": "string",
-        "enum": [
-          "active",
-          "canceled",
-          "incomplete",
-          "incomplete_expired",
-          "past_due",
-          "paused",
-          "trialing",
-          "unpaid"
         ]
       },
       "TranscriptChunk": {
